syntax = "proto3";
package remote_signin;

service Classroom {
    rpc List(ListClassroomReq) returns (ListClassroomRes);
    rpc GetStudents(GetStudentsReq) returns (GetStudentsRes);
}

message ListClassroomReq {}

message ListClassroomRes {
    oneof response {
        Data ok = 1;
        Error err = 2;
    }

    message Data {
        repeated ClassroomSummary classrooms = 1;
    }
}

message ClassroomSummary {
    string id = 1;
    string name = 2;
    uint32 student_count = 3;
}

message GetStudentsReq {
    string classroom_id = 1;
}

message GetStudentsRes {
    oneof response {
        Data ok = 1;
        Error err = 2;
    }

    message Data {
        string classroom_id = 1;
        repeated Student students = 2;
    }
}

message Student {
    string id = 1;
    string name = 2;
    repeated float face_descriptor = 3;
}

message Error {
    string err_msg = 1;
}